--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,22 +1,28 @@
-body{
+body {
   font-family: Verdana;
   text-align: center;
-}
-.header{
-  background-image:url("the-flatiron-building.png");
+  }
+
+.header {
+background-image:url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
 }
 h1 {
   font-size: 70px;
+  color:white;
   font-weight: bold;
 }
-.section1 p{
+.header p {
+ font-size: 18px;
+ color: white;
+}
+ p {
   font-size: 14px;
 }
-.section1 h2{
+.section1 h2 {
   font-size: 32px;
   font-weight: bold;
 }
-.section1 h3{
+ h3 {
   font-size: 23px;
   font-weight: bold;
 }
