--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,7 +8,7 @@ background-image:url("https://s3.amazonaws.com/codecademy-content/programs/freel
 }
 h1 {
   font-size: 70px;
-  color:white;
+  color: white;
   font-weight: bold;
 }
 .header p {
@@ -25,4 +25,13 @@ h1 {
  h3 {
   font-size: 23px;
   font-weight: bold;
+}
+.section2 {
+  background-image:url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+
+}
+.section2 h4{
+  font-size: 23px,
+  font-weight: bold;
+  color: white;
 }
