--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -22,7 +22,7 @@ h1 {
   font-size: 32px;
   font-weight: bold;
 }
- h3 {
+ .section1 h3 {
   font-size: 23px;
   font-weight: bold;
 }
@@ -31,7 +31,30 @@ h1 {
 
 }
 .section2 h4{
-  font-size: 23px,
+  font-size: 23px;
   font-weight: bold;
   color: white;
+}
+
+ h3{
+  font-size: 23px;
+  font-weight: bold;
+}
+
+}
+
+.footer {
+background-color: dimgray;
+}
+.copyright {
+  font-size: 11px;
+  background-color: dimgray;
+  color: white;
+  text-align: left;
+}
+a {
+  font-size: 18px;
+  background-color: dimgray;
+  color: white;
+  text-align: left;
 }
