--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,10 +1,15 @@
 body {
   font-family: Verdana;
   text-align: center;
+
   }
 
 .header {
 background-image:url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+}
+a{
+  font-size: 18px;
+  color: white;
 }
 h1 {
   font-size: 70px;
@@ -28,7 +33,7 @@ h1 {
 }
 .section2 {
   background-image:url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
-
+  background-repeat:no-repeat;
 }
 .section2 h4{
   font-size: 23px;
@@ -52,7 +57,7 @@ background-color: dimgray;
   color: white;
   text-align: left;
 }
-a {
+.footer a {
   font-size: 18px;
   background-color: dimgray;
   color: white;
